--- a/src/ui.html
+++ b/src/ui.html
@@ -23,7 +23,7 @@
                                         <i class = "fa fa-caret-down"></i>
                                 </button>
                                 <div class = "dropContent">
-                                        <a href = "#postGrad">Post Grad studies</a>
+                                        <a href = "#postGrad">Post Graduate studies</a>
                                         <a href = "#underGrad">Undergraduate sudies</a>
                                         <a href = "#diploma">Diploma</a>
                                 </div>
@@ -194,9 +194,9 @@
         <footer>
                 <div class = "links" id = "links">
                         <h4>My links:</h4>
-                        <a href = "https://www.linkedin.com/in/rtzy/" target = "_blank"><img src = "../icons/linkedin.png" alt = "Linkedin icon" width = "20" height = "20"></a>
-                        <a href = "https://github.com/ryantz" target = "_blank"><img src = "../icons/github.png" alt = "Github icon" width = "20" height = "20"></a>
-                        <a href = "https://www.hackerrank.com/profile/ryantanzhi1997" target = "_blank"><img src = "../icons/hackerrank.png" alt = "Github icon" width = "20" height = "20"></a>
+                        <a href = "https://www.linkedin.com/in/rtzy/" target = "_blank"><img src = "../icons/linkedin.png" alt = "Linkedin icon" width = "30" height = "30"></a>
+                        <a href = "https://github.com/ryantz" target = "_blank"><img src = "../icons/github.png" alt = "Github icon" width = "30" height = "30"></a>
+                        <a href = "https://www.hackerrank.com/profile/ryantanzhi1997" target = "_blank"><img src = "../icons/hackerrank.png" alt = "Github icon" width = "30" height = "30"></a>
                 </div>
         </footer>
                 
