--- a/src/ui.html
+++ b/src/ui.html
@@ -12,7 +12,7 @@
         </head>
 
         <body>  
-                <button onclick = "topFunction()" id = "bkToTop">Back To Top</button>
+                <button id = "bkToTop">Back To Top</button>
                 <script src = "ui.js"></script>
 
  
