enter company field w alert

--- a/src/ui.html
+++ b/src/ui.html
@@ -12,9 +12,16 @@
         </head>
 
         <body>  
+                 
                 <button id = "bkToTop">Back To Top</button>
-                <script src = "ui.js"></script>
 
+                <div class = "signin" id = "signin">
+                        <form>
+                                <label for = "cname">LOOK HERE!</label><br>
+                                <input type = "text" id = "cname" placeholder = "Enter Company name here">
+                                <button id = "submit">Submit</button>
+                        </form>
+                </div>
  
                 <div class = "nav" id = "nav">
                         <a href="#aboutMe">About Me</a>
@@ -189,6 +196,8 @@
                                 Link to <a href = "https://github.com/ryantz/rest.ts" target = "_blank">Github repo</a>
                                 </p>
                 </div>
+                <script src = "ui.js"></script>
+                 
         </body>
 
         <footer>
